NP-42459-delete-draft-doi-synx, code review
