# datacite-delete-draft-doi-handler/src/main/java/no/unit/nva/datacite/handlers/doi/DeleteDraftDoiHandler.java
@@ -6,7 +6,6 @@ import static nva.commons.core.attempt.Try.attempt;
 import com.amazonaws.services.lambda.runtime.Context;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import no.unit.nva.datacite.handlers.model.DeleteDraftDoiRequest;
 import no.unit.nva.doi.DoiClient;
 import no.unit.nva.doi.datacite.clients.DataCiteClient;
 import no.unit.nva.doi.datacite.clients.exception.ClientException;
@@ -17,11 +16,12 @@ import nva.commons.apigateway.ApiGatewayHandler;
 import nva.commons.apigateway.RequestInfo;
 import nva.commons.apigateway.exceptions.BadGatewayException;
 import nva.commons.apigateway.exceptions.BadMethodException;
+import nva.commons.apigateway.exceptions.UnauthorizedException;
 import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.secrets.SecretsReader;
 
-public class DeleteDraftDoiHandler extends ApiGatewayHandler<DeleteDraftDoiRequest, Void> {
+public class DeleteDraftDoiHandler extends ApiGatewayHandler<Void, Void> {
 
     public static final String BAD_DATACITE_RESPONSE_MESSAGE = "Bad response from DataCite fetching doi";
     protected static final String ERROR_DELETING_DRAFT_DOI = "Error deleting draft DOI";
@@ -30,7 +30,7 @@ public class DeleteDraftDoiHandler extends ApiGatewayHandler<DeleteDraftDoiReque
     private final DoiClient doiClient;
 
     public DeleteDraftDoiHandler(DoiClient doiClient, Environment environment) {
-        super(DeleteDraftDoiRequest.class, environment);
+        super(Void.class, environment);
         this.doiClient = doiClient;
     }
 
@@ -40,17 +40,21 @@ public class DeleteDraftDoiHandler extends ApiGatewayHandler<DeleteDraftDoiReque
     }
 
     @Override
-    protected Void processInput(DeleteDraftDoiRequest input, RequestInfo requestInfo, Context context)
-        throws BadGatewayException, BadMethodException {
-        var customerId = input.getCustomerId();
-        var doi = Doi.fromUri(input.getDoi());
+    protected Void processInput(Void input, RequestInfo requestInfo, Context context)
+        throws BadGatewayException, BadMethodException, UnauthorizedException {
+        var customerId = requestInfo.getCurrentCustomer();
+        var doi = getDoiFromPath(requestInfo);
         validateRequest(customerId, doi);
         return attempt(() -> deleteDraftDoi(customerId, doi))
                    .orElseThrow(failure -> new BadGatewayException(ERROR_DELETING_DRAFT_DOI));
     }
 
+    private static Doi getDoiFromPath(RequestInfo requestInfo) {
+        return Doi.fromUriString(requestInfo.getPathParameter("doiPrefix") + "/" + requestInfo.getPathParameter("doiSuffix"));
+    }
+
     @Override
-    protected Integer getSuccessStatusCode(DeleteDraftDoiRequest input, Void output) {
+    protected Integer getSuccessStatusCode(Void input, Void output) {
         return HttpURLConnection.HTTP_ACCEPTED;
     }
 
